--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "start-demo": "cd docs && yarn start"
   },
   "devDependencies": {
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "tsc-watch": "^4.0.0",
@@ -37,5 +35,9 @@
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
+  },
+  "dependencies": {
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6"
   }
 }
